fix z-index issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -251,7 +251,7 @@ main {
   user-select: none;
   box-shadow: 0 0 50px hsla(0, 0%, 0%, .2);
   background: hsla(0, 0%, 0%, .3);
-  z-index: 100;
+  z-index: 97;
 
   &:hover {
     background: rgba(0,0,0,0.8);
